--- a/index.html
+++ b/index.html
@@ -2,8 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tea Cozy</title>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   </head>
+  <header>
+    <div class="header_image">
+       <img src="./resources/images/img-tea-cozy-logo.png">
+    </div>
+    <div class="navig">
+       <nav>
+          <span>
+            <a href="https://www.w3schools.com"><u>Mission</u></a>
+          </span>
+          <span>
+            <a href="https://www.w3schools.com"><u>Featured Tea</u></a>
+          </span>
+          <span>
+            <a href="https://www.w3schools.com"><u>Locations</u></a>
+          </span>
+       </nav>
+    </div>
+
+
+
+
+  </header>
   <body>
 
   </body>
