header draft done

--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
           </span>
        </nav>
     </div>
-
-
-
-
   </header>
   <body>
+    <div class="mission">
+      <h1>Our Mission</h1>
+    </div>
+    <div class="feature">
 
+    </div>
+    <div class="locations">
+
+    </div>
+    <footer>
+    </footer>
   </body>
 </html>
