--- a/index.html
+++ b/index.html
@@ -25,9 +25,22 @@
   </header>
   <body>
     <div class="mission">
-      <h1>Our Mission</h1>
+
+      <img src="./resources/images/img-mission-background.jpg"/>
+       <div class="statement">
+         <h2>Our Mission</h2>
+         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+       </div>
+
     </div>
     <div class="feature">
+      <h1>Tea of the Month</h1>
+      <h3>What's Steeping at The Tea Cozy?</h3>
+      <p>Fall Berry Blitz Tea
+      Spiced Rum Tea
+      Seasonal Donuts
+      Myrtle Ave Tea
+      Bedford Bizarre Tea</p>
 
     </div>
     <div class="locations">
