--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
        </nav>
     </div>
   </header>
-  <body>
+  <body class="conteiner">
     <div class="mission">
-
-      <img src="./resources/images/img-mission-background.jpg"/>
+      <img src="./resources/images/img-mission-background.jpg"/ class="pic">
        <div class="statement">
          <h2>Our Mission</h2>
          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
