--- a/index.html
+++ b/index.html
@@ -33,13 +33,32 @@
 
     </div>
     <div class="feature">
-      <h1>Tea of the Month</h1>
-      <h3>What's Steeping at The Tea Cozy?</h3>
-      <p>Fall Berry Blitz Tea
-      Spiced Rum Tea
-      Seasonal Donuts
-      Myrtle Ave Tea
-      Bedford Bizarre Tea</p>
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at The Tea Cozy?</h4>
+    <div class="listofoffers">
+
+
+      <div class="offer">
+        <img src="./resources/images/img-berryblitz.jpg"/ class="offerpic">
+        <p>Fall Berry Blitz Tea</p>
+      </div>
+      <div class="offer">
+        <img src="./resources/images/img-spiced-rum.jpg"/ class="offerpic">
+        <p>Spiced Rum Tea</p>
+      </div>
+      <div class="offer">
+        <img src="./resources/images/img-donut.jpg"/ class="offerpic">
+        <p>Seasonal Donuts</p>
+      </div>
+      <div class="offer">
+        <img src="./resources/images/img-myrtle-ave.jpg"/ class="offerpic">
+        <p>Myrtle Ave Tea</p>
+      </div>
+      <div class="offer">
+        <img src="./resources/images/img-bedford-bizarre.jpg"/ class="offerpic">
+        <p>Bedford Bizarre Tea</p>
+      </div>
+     </div>
 
     </div>
     <div class="locations">
