--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
          <h2>Our Mission</h2>
          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
        </div>
-
     </div>
+
     <div class="feature">
+
       <h2>Tea of the Month</h2>
       <h4>What's Steeping at The Tea Cozy?</h4>
     <div class="listofoffers">
-
-
       <div class="offer">
         <img src="./resources/images/img-berryblitz.jpg"/ class="offerpic">
         <p>Fall Berry Blitz Tea</p>
@@ -61,9 +60,56 @@
      </div>
 
     </div>
-    <div class="locations">
 
+
+  <div class="locations">
+
+
+    <!--div class="shoplist">
+      <div class="shop">
+        <h3 class="cafename">Downtown</h2>
+        <p class="addr">384 West 4th St</p>
+        <p class="floor">Suite 108</p>
+        <p class="state">Portland, Maine</p>
+      </div>
+      <div class="shop">
+        <h3 class="cafename">East Bayside</h2>
+        <p class="addr">3433 Phisherman's Avenue</p>
+        <p class="floor">(Northwest Corner)</p>
+        <p class="state">Portland, Maine</p>
+      </div>
+      <div class="shop">
+        <h3 class="cafename">Oakdale</h2>
+        <p class="addr">515 Crescent Avenue</p>
+        <p class="floor">Second Floor</p>
+        <p class="state">Portland, Maine</p>
+      </div>
+    </div-->
     </div>
+    <div class="locationsframe">
+      <h2 class="locheader">Locations</h2>
+      <div class="shoplist">
+        <div class="shop">
+          <h3 class="cafename">Downtown</h2>
+          <p class="addr">384 West 4th St</p>
+          <p class="floor">Suite 108</p>
+          <p class="state">Portland, Maine</p>
+        </div>
+        <div class="shop">
+          <h3 class="cafename">East Bayside</h2>
+          <p class="addr">3433 Phisherman's Avenue</p>
+          <p class="floor">(Northwest Corner)</p>
+          <p class="state">Portland, Maine</p>
+        </div>
+        <div class="shop">
+          <h3 class="cafename">Oakdale</h2>
+          <p class="addr">515 Crescent Avenue</p>
+          <p class="floor">Second Floor</p>
+          <p class="state">Portland, Maine</p>
+        </div>
+       </div>
+    </div>
+
     <footer>
     </footer>
   </body>
