--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Tea Cozy</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   </head>
+    <body class="conteiner">
   <header>
     <div class="header_image">
        <img src="./resources/images/img-tea-cozy-logo.png">
@@ -23,7 +24,7 @@
        </nav>
     </div>
   </header>
-  <body class="conteiner">
+
     <div class="mission">
       <img src="./resources/images/img-mission-background.jpg"/ class="pic">
        <div class="statement">
@@ -61,30 +62,7 @@
 
     </div>
 
-
   <div class="locations">
-
-
-    <!--div class="shoplist">
-      <div class="shop">
-        <h3 class="cafename">Downtown</h2>
-        <p class="addr">384 West 4th St</p>
-        <p class="floor">Suite 108</p>
-        <p class="state">Portland, Maine</p>
-      </div>
-      <div class="shop">
-        <h3 class="cafename">East Bayside</h2>
-        <p class="addr">3433 Phisherman's Avenue</p>
-        <p class="floor">(Northwest Corner)</p>
-        <p class="state">Portland, Maine</p>
-      </div>
-      <div class="shop">
-        <h3 class="cafename">Oakdale</h2>
-        <p class="addr">515 Crescent Avenue</p>
-        <p class="floor">Second Floor</p>
-        <p class="state">Portland, Maine</p>
-      </div>
-    </div-->
     </div>
     <div class="locationsframe">
       <h2 class="locheader">Locations</h2>
@@ -110,7 +88,14 @@
        </div>
     </div>
 
-    <footer>
+    <footer class="info">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
     </footer>
+    <footer class="copyright">
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
+
   </body>
 </html>
